--- a/_dev/css/theme/components/product/_product-miniature.scss
+++ b/_dev/css/theme/components/product/_product-miniature.scss
@@ -1,10 +1,12 @@
 
 .product-miniature {
+  $self: &;
+
   &__quick-view {
     position: absolute;
-    right: $small-space;
-    bottom: $small-space;
-    font-size: rem-calc(20px);
+    right: map-get($spacers, 2);
+    bottom: map-get($spacers, 2);
+    @include font-size(20px);
     width: 1.7em;
     height: 1.7em;
     line-height: 1.7em;
@@ -17,6 +19,10 @@
     line-height: inherit;
   }
 
+  &__pricing {
+    margin: 0 0 map-get($spacers, 4);
+  }
+
   &__title {
     $number-of-lines: 2;
     $line-height: 1.3;
@@ -24,5 +30,17 @@
     line-height: $line-height;
     height: #{$number-of-lines * $line-height}em;
     overflow: hidden;
+  }
+
+  &--smaller {
+    .price,
+    #{$self}__title {
+      @include font-size(15px);
+    }
+
+    #{$self}__pricing {
+      margin: 0;
+    }
+
   }
 }
