--- a/_dev/css/theme/components/product/_quickview.scss
+++ b/_dev/css/theme/components/product/_quickview.scss
@@ -8,7 +8,7 @@
     background: $gray-100;
   }
   .modal-header {
-    padding: $small-space;
+    padding: map-get($spacers, 2);
     border: none;
   }
   .modal-body {
