--- a/_dev/css/theme/components/_index.scss
+++ b/_dev/css/theme/components/_index.scss
@@ -1,5 +1,6 @@
 @import "product/index";
 @import "customer/index";
+@import "cart/index";
 @import "menu/index";
 @import "404/index";
 @import "newsletter/index";
