--- a/_dev/css/abstracts/variables/bootstrap/_typography.scss
+++ b/_dev/css/abstracts/variables/bootstrap/_typography.scss
@@ -15,7 +15,7 @@ $h2-font-size:                $font-size-base * 1.75;
 $h3-font-size:                $font-size-base * 1.5;
 $h4-font-size:                $font-size-base * 1.25;
 $h5-font-size:                $font-size-base * 1.125;
-$h6-font-size:                $font-size-base * 1.125;
+$h6-font-size:                $font-size-base;
 
 $headings-margin-bottom:      map-get($spacers, 2);
 $headings-font-weight:        $font-weight-bold;
