--- a/_dev/css/theme/utility/_typography.scss
+++ b/_dev/css/theme/utility/_typography.scss
@@ -6,3 +6,19 @@
 .line-height-reset {
   line-height: inherit !important;
 }
+
+.font-sm {
+  @include font-size($font-size-sm);
+}
+
+.font-lg {
+  @include font-size($font-size-lg);
+}
+
+.font-xs {
+  @include font-size($font-size-xs);
+}
+
+.font-base {
+  @include font-size($font-size-base);
+}
