--- a/_dev/css/theme/components/search/_search-result.scss
+++ b/_dev/css/theme/components/search/_search-result.scss
@@ -15,6 +15,9 @@
 }
 
 .search-result {
+  @include media-breakpoint-up(md) {
+    padding: map-get($spacers, 3);
+  }
   &__products {
     margin: map-get($spacers, 3) -#{map-get($spacers, 2)} 0;
     .products-list__block {
@@ -29,15 +32,16 @@
 
   &__bottom {
     position: sticky;
-    bottom: -#{rem-calc(16px)};
+    bottom: -#{$modal-inner-padding};
     left: 0;
     right: 0;
     background: #fff;
-    margin: 0 -#{rem-calc(20px)};
-    padding: rem-calc(10px) rem-calc(20px);
+    margin: 0 -#{map-get($spacers, 2)};
+    padding: map-get($spacers, 2) map-get($spacers, 3);
     z-index: 1;
-    @include media-breakpoint-up(lg) {
-      padding: 0 rem-calc(20px);
+    @include media-breakpoint-up(md) {
+      padding: 0;
+      margin: 0;
     }
   }
 }
