--- a/_dev/css/theme/layout/_header.scss
+++ b/_dev/css/theme/layout/_header.scss
@@ -1,6 +1,6 @@
 /* HEADER STYLES */
 
-.page-header {
+.l-header {
   border-bottom: 1px solid $border-color;
   margin: 0 0 map-get($spacers, 3);
 }
