--- a/_dev/css/theme/components/cart/_cart-dropdown.scss
+++ b/_dev/css/theme/components/cart/_cart-dropdown.scss
@@ -1,7 +1,7 @@
 
 .cart-dropdown {
   &__content {
-    padding: map-get($spacers, 3) map-get($spacers, 3) 0;
+    padding: map-get($spacers, 2) map-get($spacers, 3) map-get($spacers, 3);
   }
 
   &__products {
