--- a/_dev/css/theme/components/cart/_cart-products.scss
+++ b/_dev/css/theme/components/cart/_cart-products.scss
@@ -1,8 +1,9 @@
 
 .cart-products {
   display: flex;
-  padding: map-get($spacers, 3) 0;
+  padding-bottom: map-get($spacers, 3);
   &:not(:first-child) {
+    padding-top: map-get($spacers, 3);
     border-top: 1px solid $border-color;
   }
 
