--- a/_dev/css/theme/components/customer/_customer-links.scss
+++ b/_dev/css/theme/components/customer/_customer-links.scss
@@ -32,7 +32,7 @@
     white-space: nowrap;
     flex: 0 0;
     padding: map-get($spacers, 2);
-    @include font-size($font-size-sm);
+    @include font-size($font-size-base);
     color: $gray-800;
     font-weight: 700;
     border-radius: $border-radius;
