--- a/_dev/css/theme/layout/_header.scss
+++ b/_dev/css/theme/layout/_header.scss
@@ -42,6 +42,7 @@
     border-radius: 50%;
     background: $primary;
     color: $white;
+    font-weight: 700;
     text-align: center;
     position: absolute;
     right: -0.2em;
