--- a/_dev/css/abstracts/mixins/_custom-col.scss
+++ b/_dev/css/abstracts/mixins/_custom-col.scss
@@ -1,10 +1,10 @@
-@mixin customColPadded($width, $padding: 0 $grid-gutter-half-width) {
+@mixin custom-col-padded($width, $padding: 0 $grid-gutter-half-width) {
   flex: 0 0 $width;
   max-width: $width;
   padding: $padding;
 }
 
-@mixin customCol($width) {
+@mixin custom-col($width) {
   flex: 0 0 $width;
   max-width: $width;
 }
