--- a/_dev/css/theme/components/cart/_cart-products.scss
+++ b/_dev/css/theme/components/cart/_cart-products.scss
@@ -8,7 +8,7 @@
   }
 
   &__thumb {
-    @include customCol(rem-calc(80px));
+    @include custom-col(rem-calc(80px));
     padding-right: map-get($spacers, 2);
   }
 
