BS scss variables proper way to override

--- a/_dev/css/abstracts/variables/bootstrap/_typography.scss
+++ b/_dev/css/abstracts/variables/bootstrap/_typography.scss
@@ -17,7 +17,7 @@ $h4-font-size:                $font-size-base * 1.25;
 $h5-font-size:                $font-size-base * 1.125;
 $h6-font-size:                $font-size-base;
 
-$headings-margin-bottom:      map-get($spacers, 2);
+$headings-margin-bottom:      10px;
 $headings-font-weight:        $font-weight-bold;
 $headings-line-height:        1.2;
 
