--- a/_dev/css/abstracts/variables/bootstrap/_card.scss
+++ b/_dev/css/abstracts/variables/bootstrap/_card.scss
@@ -1,3 +1,4 @@
 
 $card-border-radius:                $border-radius;
+$card-border-width:                 1px;
 $card-inner-border-radius:          subtract($card-border-radius, $card-border-width);
