--- a/_dev/css/abstracts/variables/bootstrap/_components.scss
+++ b/_dev/css/abstracts/variables/bootstrap/_components.scss
@@ -1,6 +1,6 @@
 
 $border-width:                1px;
-$border-color:                gray("300");
+$border-color:                $gray-300;
 $border-radius:               .4rem;
 $border-radius-lg:            .4rem;
 $border-radius-sm:            .4rem;
