product page unused styles removed, cms-content component added

--- a/_dev/css/theme/components/_index.scss
+++ b/_dev/css/theme/components/_index.scss
@@ -1,6 +1,7 @@
 @import "product/index";
 @import "customer/index";
 @import "cart/index";
+@import "cms/index";
 @import "menu/index";
 @import "404/index";
 @import "newsletter/index";
