Menu desktop fix

--- a/_dev/css/theme/components/menu/_mainmenu.scss
+++ b/_dev/css/theme/components/menu/_mainmenu.scss
@@ -36,7 +36,8 @@
     display: block;
 
     @include media-breakpoint-up(md) {
-      display: inline-block
+      display: inline-block;
+      padding: 0;
     }
 
     &--top {
