Badge display fix

--- a/_dev/css/theme/components/customer/_customer.scss
+++ b/_dev/css/theme/components/customer/_customer.scss
@@ -8,13 +8,10 @@
     vertical-align: middle;
   }
   .label {
-    padding: 0.25rem 0.375rem;
-    margin: 0.125rem;
-    font-size: inherit;
-    font-weight: 400;
-    color: #fff;
-    white-space: nowrap;
-    border-radius: 3px;
+    white-space: normal;
+    &.bright {
+      color: #fff;
+    }
   }
 }
 
