--- a/_dev/css/theme/utility/_typography.scss
+++ b/_dev/css/theme/utility/_typography.scss
@@ -1,10 +1,14 @@
 
 .font-reset {
+  /* stylelint-disable */
   font-size: inherit !important;
+  /* stylelint-enable */
 }
 
 .line-height-reset {
+  /* stylelint-disable */
   line-height: inherit !important;
+  /* stylelint-enable */
 }
 
 .font-sm {
