--- a/_dev/css/dynamic/modal/_override.scss
+++ b/_dev/css/dynamic/modal/_override.scss
@@ -3,18 +3,22 @@
 }
 
 .modal-fullscreen {
+  /* stylelint-disable */
   padding: 0 !important; // override inline padding-right added from js
+  /* stylelint-enable */
   .modal-dialog {
     width: 100vw;
     max-width: none;
     height: 100%;
     margin: 0;
   }
+
   .modal-content {
     height: 100%;
     border: 0;
     @include border-radius(0);
   }
+
   .modal-body {
     overflow-y: auto;
   }
@@ -22,30 +26,35 @@
 
 .modal .modal-dialog-aside {
   width: 100%;
+  height: 100%;
+  margin: 0;
+  transition: transform 0.2s;
+  transform: translate(0);
   @include media-breakpoint-up(sm) {
     max-width: 320px;
   }
-  height: 100%;
-  margin: 0;
-  transform: translate(0);
-  transition: transform 0.2s;
 }
+
 .modal .modal-dialog-aside .modal-content {
   height: inherit;
   border: 0;
   border-radius: 0;
 }
+
 .modal .modal-dialog-aside .modal-content .modal-body {
   overflow-y: auto;
 }
+
 .modal.fixed-right .modal-dialog-aside {
   margin-left: auto;
   transform: translateX(100%);
 }
+
 .modal.fixed-left .modal-dialog-aside {
   margin-right: auto;
   transform: translateX(-100%);
 }
+
 .modal.show .modal-dialog-aside {
   transform: translateX(0);
 }
