--- a/_dev/css/theme/override/bootstrap/_custom-control.scss
+++ b/_dev/css/theme/override/bootstrap/_custom-control.scss
@@ -2,10 +2,6 @@
 .custom-checkbox-color {
   @extend .custom-checkbox;
 
-  .custom-control-input-color {
-    @extend .custom-control-label::before;
-  }
-
   .custom-control-label {
     &::before {
       /* stylelint-disable */
@@ -21,6 +17,21 @@
   }
 }
 
+.custom-control-input-color {
+  position: absolute;
+  top: ($font-size-base * $line-height-base - $custom-control-indicator-size) / 2;
+  left: -($custom-control-gutter + $custom-control-indicator-size);
+  display: block;
+  width: $custom-control-indicator-size;
+  height: $custom-control-indicator-size;
+  pointer-events: none;
+  content: "";
+  background-color: $custom-control-indicator-bg;
+  border: $custom-control-indicator-border-color solid $custom-control-indicator-border-width;
+  @include box-shadow($custom-control-indicator-box-shadow);
+  @include border-radius($custom-checkbox-indicator-border-radius);
+}
+
 
 .custom-radio-color {
   @extend .custom-radio;
@@ -30,11 +41,12 @@
   padding-left: $custom-color-control-indicator-size;
 
   .custom-control-input-color {
-    @extend .custom-control-label::before;
+    @extend .custom-control-input-color;
     top: 0;
     left: -#{$custom-color-control-indicator-size};
     width: $custom-color-control-indicator-size;
     height: $custom-color-control-indicator-size;
+    border-radius: $custom-radio-indicator-border-radius;
   }
 
   .custom-control-input {
