Stars, listing fix

--- a/_dev/css/theme/components/product/_index.scss
+++ b/_dev/css/theme/components/product/_index.scss
@@ -3,6 +3,7 @@
 @import "quickview";
 @import "customization-modal";
 @import "price";
+@import "stars";
 @import "products-list";
 @import "product-slider";
 @import "comments-pagination";
