--- a/modules/productcomments/views/css/productcomments.css
+++ b/modules/productcomments/views/css/productcomments.css
@@ -1,88 +1,1 @@
-/**
- * Copyright since 2007 PrestaShop SA and Contributors
- * PrestaShop is an International Registered Trademark & Property of PrestaShop SA
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License 3.0 (AFL-3.0)
- * that is bundled with this package in the file LICENSE.md.
- * It is also available through the world-wide-web at this URL:
- * https://opensource.org/licenses/AFL-3.0
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@prestashop.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade PrestaShop to newer
- * versions in the future. If you wish to customize PrestaShop for your
- * needs please refer to https://devdocs.prestashop.com/ for more information.
- *
- * @author    PrestaShop SA and Contributors <contact@prestashop.com>
- * @copyright Since 2007 PrestaShop SA and Contributors
- * @license   https://opensource.org/licenses/AFL-3.0 Academic Free License 3.0 (AFL-3.0)
- */
-/**
- *  Star component
- */
-
-.star-content {
-  margin: 0 0 0 5px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-}
-
-.star-content div.star,
-.star-content div.star-on,
-.star-content div.star-hover {
-  display: block;
-  width: 20px;
-  height: 20px;
-  background: url(../img/stars.png) no-repeat 0 0 transparent;
-  flex: auto;
-  margin-left: 3px;
-}
-.star-content div.star-on,
-.star-content div.star-hover {
-  background-position: -24px 0;
-}
-
-.small-stars .star-content div.star,
-.small-stars .star-content div.star-on,
-.small-stars .star-content div.star-hover {
-  background: url(../img/small_stars.png) no-repeat 0 0 transparent;
-  width: 16px;
-  height: 16px;
-  margin-left: 2px;
-}
-
-.small-stars .star-content div.star-on,
-.small-stars .star-content div.star-hover {
-  background-position: -19px 0;
-}
-
-.star-content div.star-hover {
-  cursor: pointer;
-}
-
-.grade-stars {
-  position: relative;
-  height: 20px;
-  min-width: 120px;
-  display: inline-block;
-}
-
-.grade-stars.small-stars {
-  min-width: 100px;
-}
-
-.grade-stars .star-content {
-  position: absolute;
-  top: 3px;
-  left: 0;
-}
-
-.criterion-rating .grade-stars .star-content {
-  top: 0;
-}
+/* EMPTY */
