--- a/_dev/css/theme/components/product/_stars.scss
+++ b/_dev/css/theme/components/product/_stars.scss
@@ -1,25 +1,25 @@
 
 .star-content {
-  display: flex;
   position: absolute;
   top: 0;
   left: 0;
+  display: flex;
 
   .star,
   .star-on,
   .star-hover {
     display: block;
+    flex: auto;
     width: 20px;
     height: 20px;
-    background: url('../img/icons/star_gray.svg') no-repeat 0 0 transparent;
-    flex: auto;
     margin-left: 3px;
+    background: url("../img/icons/star_gray.svg") no-repeat 0 0 transparent;
     background-size: 20px;
   }
 
   .star-on,
   .star-hover {
-    background-image: url('../img/icons/star_active.svg');
+    background-image: url("../img/icons/star_active.svg");
   }
 
   .star-hover {
@@ -40,23 +40,24 @@
 
 .grade-stars {
   position: relative;
-  height: 20px;
-  min-width: 120px;
   display: inline-block;
+  min-width: 120px;
+  height: 20px;
+
   &.small-stars {
-    height: 16px;
     min-width: 70px;
+    height: 16px;
   }
 }
 
 .product-list-reviews {
   position: absolute;
+  right: 0;
   bottom: 0;
   left: 0;
-  right: 0;
   padding: map-get($spacers, 2);
-  background: rgba($white, 0.4);
   visibility: hidden;
+  background: rgba($white, 0.4);
 
   .grade-stars {
     display: block;
